# KashiwaaS

./: .cursorignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  REVIEW.md  crontab  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/: settings.json
.claude/hooks/: after-file-edit-lint.sh  emit_pytest_ok_json.py  emit_ruff_ok_json.py  lib.sh  pre-tool-use-guard.sh  pre_tool_use_guard.py  stop-run-tests.sh
.claude/skills/plan-first/: SKILL.md  plan-template.md
.cursor/: BUGBOT.md  hooks.json
.github/: PULL_REQUEST_TEMPLATE.md  renovate.json
.github/workflows/: ci.yml  renovate.yml
docs/: README.md  architecture.md  bot.md  design.md  e2e.md  features.md  operations.md  runtime-config.md  stacked-pr-workflow.md  testing.md
elasticsearch/: Dockerfile
kibana/templates/: dashboard.ndjson.j2  index_pattern.ndjson.j2  lens.ndjson.j2
scripts/: backfill.py  e2e_compose_smoke.sh  import_kibana_objects.py  setup_indices.py
src/: main.py
src/analysis/: __init__.py  daily.py  daily_pipeline.py  types.py  visualization.py  visualization_prep.py  weekly.py  weekly_pipeline.py
src/bot/: alerter.py  cursor_reply.py  formatter.py  kashiwaas.py  kashiwaas_mattermost.py  kashiwaas_mention.py  report_payloads.py  reporter.py  slack_mrkdwn.py  thread_store.py  utils.py
src/bot/adapters/: __init__.py
src/bot/adapters/mattermost/: __init__.py  app.py  chat_adapter.py
src/bot/adapters/slack/: __init__.py  app.py  chat_adapter.py
src/bot/adapters/valkey/: __init__.py  thread_conversation_repo.py
src/bot/application/: __init__.py  chat_adapter.py  concurrency.py  mention_service.py  processing_state.py
src/bot/domain/: __init__.py  conversation.py  repository.py
src/bot/infra/: __init__.py  cursor_client_factory.py
src/cli/: __init__.py  __main__.py  args.py  fetch_cmd.py  fetch_pipeline.py  main.py  report_cmd.py
src/cursor/: client.py
src/es_client/: __init__.py  client.py  index.py  query.py  slack_doc.py
src/kibana/: __init__.py  capture.py  dashboard.py
src/mattermost/: client.py
src/slack/: client.py  markdown_blocks.py  message.py
src/utils/: config.py  date_utils.py  logger.py  retry.py
tests/: conftest.py  test_analysis.py  test_config.py  test_cursor_client.py  test_cursor_reply.py  test_es_client.py  test_fetch_cmd.py  test_kashiwaas.py  test_kashiwaas_mattermost.py  test_pre_tool_use_guard.py  test_pure_fdm.py  test_slack.py  test_slack_mrkdwn.py
tests/adapters/valkey/: test_thread_conversation_repo.py
