[project]
name = "kashiwaas"
version = "0.1.0"
description = ""
authors = [
    {name = "takak2166",email = "28010438+takak2166@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "slack-sdk (>=3.35.0,<4.0.0)",
    "elasticsearch (>=8.17.2,<9.0.0)",
    "selenium (>=4.30.0,<5.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "flake8 (>=7.1.2,<8.0.0)",
    "pytz (>=2025.1,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
