[project]
name = "kashiwaas"
version = "0.1.0"
description = ""
authors = [
    {name = "takak2166",email = "28010438+takak2166@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "slack-sdk (>=3.35.0,<4.0.0)",
    "elasticsearch (>=8.17.2,<9.0.0)",
    "selenium (>=4.30.0,<5.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "flake8 (>=7.1.2,<8.0.0)",
    "flake8-pyproject (>=1.0.0,<2.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "matplotlib (>=3.9.0,<4.0.0)",
    "numpy (>=1.26.0,<2.0.0)",
    "jinja2 (>=3.1.3,<4.0.0)",
    "pandas (>=2.1.0,<3.0.0)",
    "plotly (>=5.18.0,<6.0.0)",
    "kaleido (==0.2.1)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "src"}]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/docs
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip = ["docs"]

[tool.flake8]
max-line-length = 120
extend-ignore = "E203"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "docs",
]
per-file-ignores = [
    "__init__.py: F401",
    "scripts/*.py: E402"
]
