[project]
name = "kashiwaas"
version = "0.1.0"
description = ""
authors = [
    {name = "takak2166",email = "28010438+takak2166@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "slack-sdk (>=3.35.0,<4.0.0)",
    "elasticsearch (>=9.3.0,<9.4.0)",
    "selenium (>=4.30.0,<5.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "ruff (>=0.9.0,<1.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "contourpy (>=1.3.3,<2.0.0)",
    "kiwisolver (>=1.4.9,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "numpy (>=2.0.0,<3.0.0)",
    "jinja2 (>=3.1.3,<4.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "pillow (>=11.3.0,<13.0.0)",
    "plotly (>=5.18.0,<6.0.0)",
    "kaleido (==0.2.1)",
    "slack-bolt (>=1.21.0,<2.0.0)",
    "valkey (>=6.0.0,<7.0.0)",
    "fakeredis (>=2.34.0,<3.0.0)",
    "charset-normalizer (>=3.4.7,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "src"}]

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "docs",
    ".venv",
]

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"scripts/*.py" = ["E402"]
"src/analysis/visualization.py" = ["E402"]
